--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #18181f;
+  background: #1a1b20;
   color: #fff;
 }
 
