--- a/src/components/Dashboard/Transactions/transactions.scss
+++ b/src/components/Dashboard/Transactions/transactions.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .dashboard__transaction {
   margin: 12px auto;
   padding: 24px;
@@ -34,7 +36,7 @@
       gap: 20px;
       
       .icon {
-        background: linear-gradient(45deg, #C22ED0, #5FFAE0);
+        background: $gradient-5;
         border-radius: 12px;
         font-size: 28px;
         width: 48px;
@@ -63,9 +65,40 @@
   
 }
 
+.modal__transaction {
+  &__list-type {
+    list-style: none;
+    display: flex;
+    overflow-x: scroll;
+    gap: 24px;
 
+    li {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      gap: 4px;
+      width: 50px;
+      border-radius: 12px;
+      opacity: .6;
+      cursor: pointer;
 
+      &.active {
+        opacity: 1;
+      }
 
+      div {
+        background: $gradient-5;
+        border-radius: 12px;
+        font-size: 28px;
+        width: 48px;
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
+}
 .modal__transaction__add {
   display: flex;
   flex-direction: column;
