--- a/src/components/Dashboard/Wallet/wallet.scss
+++ b/src/components/Dashboard/Wallet/wallet.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .dashboard__wallet {
   margin: 12px auto;
   padding: 24px;
@@ -25,16 +27,18 @@
     flex-direction: row;
     gap: 12px;
     margin-top: 24px;
+    overflow-x: scroll;
     
     &__item {
       display: flex;
       flex-direction: column;
       gap: 12px;
-      background: linear-gradient(45deg, #CCFBFF, #EF96C5);
-      color: black;
-      width: 400px;
+      background: $gradient-4;
+      color: white;
+      min-width: 280px;
       padding: 12px;
-      border-radius: 24px;
+      border-radius: 16px;
+      box-shadow: #1153fc81 0px 24px 20px -20px;
     }
   
     h3 small {
@@ -47,5 +51,42 @@
     h3:last-child {
       margin-left: auto;
     }
+  }
+}
+
+.modal__transaction__colors {
+  list-style: none;
+  display: flex;
+  gap: 4px;
+
+  li {
+    width: 50px;
+    height: 50px;
+    border-radius: 12px;
+    &:nth-child(1) {
+      background: $gradient-1;
+    }
+    &:nth-child(2) {
+      background: $gradient-2;
+    }
+    &:nth-child(3) {
+      background: $gradient-3;
+    }
+    &:nth-child(4) {
+      background: $gradient-4;
+    }
+    &:nth-child(5) {
+      background: $gradient-5;
+    }
+    &:nth-child(6) {
+      background: $gradient-6;
+    }
+    &:nth-child(7) {
+      background: $gradient-7;
+    }
+    &:nth-child(8) {
+      background: $gradient-8;
+    }
+
   }
 }
