--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,14 @@ h1::after {
 .material-symbols-outlined {
   cursor: pointer;
 }
+
+::-webkit-scrollbar {
+  height: 8px;
+  width: 20px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(80, 80, 80); 
+  border-radius: 10px;
+}
