--- a/src/components/Dashboard/Wallet/wallet.scss
+++ b/src/components/Dashboard/Wallet/wallet.scss
@@ -62,6 +62,11 @@
     width: 50px;
     height: 50px;
     border-radius: 12px;
+    opacity: .5;
+    
+    &.active {
+      opacity: 1;
+    }
     &:nth-child(1) {
       background: $gradient-1;
     }
@@ -86,6 +91,5 @@
     &:nth-child(8) {
       background: $gradient-8;
     }
-
   }
 }
