--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 * {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
 }
 
 html, body {
@@ -12,7 +13,6 @@ html, body {
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
   background: #1a1b20;
   color: #fff;
 }
