--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -9,16 +9,20 @@
   justify-content: center;
   align-items: center;
   z-index: 2;
+  backdrop-filter: blur(12px);
+  
+  --animate-duration: .4s;
 }
 
 .modal {
+  position: absolute;
   padding: 24px;
   width: 400px;
   background: #141414;
   color: white;
   z-index: 10;
   border-radius: 16px;
-  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
+  border: 4px solid #292934;
   
   &__header {
     display: flex;
