--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,14 @@ $gradient-5: linear-gradient(45deg, #FACD68, #FC76B3);
 $gradient-6: linear-gradient(45deg, #00F7A7, #04F5ED);
 $gradient-7: linear-gradient(45deg, #1DE5E2, #B588F7);
 $gradient-8: linear-gradient(45deg, #FFE324, #FFB533);
+
+
+$dark-900: #121212;
+$dark-800: #212121;
+$dark-700: #616161;
+$dark-600: #757575;
+$dark-500: #9e9e9e;
+$dark-400: #bdbdbd;
+$dark-300: #e0e0e0;
+$dark-200: #eeeeee;
+$dark-100: #f5f5f5;
