--- a/src/components/Dashboard/Wallet/wallet.scss
+++ b/src/components/Dashboard/Wallet/wallet.scss
@@ -45,6 +45,11 @@
         top: 16px;
         right: 16px;
       }
+
+      img {
+        margin-left: auto;
+        width: 32px;
+      }
     }
   
     h3 small {
