--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 400px;
+    width: 100vw;
+    padding: 0 24px;
     
     form {
         display: flex;
