Fix responsive css

--- a/src/components/Dashboard/Wallet/wallet.scss
+++ b/src/components/Dashboard/Wallet/wallet.scss
@@ -68,7 +68,9 @@
 .modal__transaction__colors {
   list-style: none;
   display: flex;
-  gap: 4px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 12px;
 
   li {
     width: 50px;
