--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -17,7 +17,7 @@
 .modal {
   position: absolute;
   padding: 24px;
-  width: 400px;
+  margin: 0 24px;
   background: #141414;
   color: white;
   z-index: 10;
