--- a/src/components/Dashboard/Transactions/transactions.scss
+++ b/src/components/Dashboard/Transactions/transactions.scss
@@ -69,7 +69,8 @@
   &__list-type {
     list-style: none;
     display: flex;
-    overflow-x: scroll;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 24px;
 
     li {
@@ -101,6 +102,7 @@
 .modal__transaction__add {
   display: flex;
   flex-direction: column;
+  gap: 12px;
   
   input, select {
     padding: 12px;
@@ -108,7 +110,6 @@
     border: 1px solid #292934;
     color: #fff;
     background: none;
-    margin-bottom: 12px;
   }
 
   input[type=submit] {
