--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,15 +1,18 @@
 @import 'src/styles/variables';
 
 .navbar {
-    left: 0;
-    right: 0;
-    bottom: 0;
+    left: 12px;
+    right: 12px;
+    bottom: 12px;
     position: fixed;
     background-color: $dark-800;
+    box-sizing: border-box;
+    border: 2px solid #292934;
     padding: 12px 0;
-    border-radius: 12px 12px 0 0;
+    border-radius: 12px;
     display: flex;
     justify-content: space-around;
+    box-shadow: 0px 0px 10px #292934;
 
     button {
         background: none;
