--- a/src/index.scss
+++ b/src/index.scss
@@ -28,14 +28,7 @@ h1::after {
 }
 
 ::-webkit-scrollbar {
-  height: 8px;
-  width: 20px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: rgb(80, 80, 80); 
-  border-radius: 10px;
+  display: none;
 }
 
 .background-1 {
