--- a/src/components/Dashboard/Transactions/transactions.scss
+++ b/src/components/Dashboard/Transactions/transactions.scss
@@ -5,6 +5,7 @@
   padding: 24px;
   border-radius: 12px;
   background-color: $dark-800;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
   
   &__header {
     display: flex;
@@ -14,6 +15,7 @@
     
     button {
       border: 1px solid white;
+      color: black;
       border-radius: 8px;
       height: 40px;
       width: 40px;
@@ -59,6 +61,10 @@
       &__price {
         margin-left: auto;
         align-items: flex-end;
+
+        strong {
+          color: #ff4a3d;
+        }
       }
     }
   }
