--- a/src/components/Dashboard/Wallet/wallet.scss
+++ b/src/components/Dashboard/Wallet/wallet.scss
@@ -5,6 +5,7 @@
   padding: 24px;
   border-radius: 12px;
   background-color: $dark-800;
+
   &__header {
     display: flex;
     justify-content: space-between;
@@ -13,6 +14,7 @@
     
     button {
       border: 1px solid white;
+      color: black;
       border-radius: 8px;
       height: 40px;
       width: 40px;
