--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -10,7 +10,6 @@
   align-items: center;
   z-index: 2;
   backdrop-filter: blur(12px);
-  
   --animate-duration: .4s;
 }
 
@@ -23,11 +22,18 @@
   z-index: 10;
   border-radius: 16px;
   border: 4px solid #292934;
+  width: calc(100vw - 48px);
   
   &__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 12px;
+
+    h2::after {
+      content: '.';
+      color: #ff2cdf;
+      margin-left: 4px;
+    }
   }
 }
