--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,18 +1,17 @@
 @import 'src/styles/variables';
 
 .navbar {
-    left: 12px;
-    right: 12px;
-    bottom: 12px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
     position: fixed;
     background-color: $dark-800;
     box-sizing: border-box;
-    border: 2px solid #292934;
-    padding: 12px 0;
-    border-radius: 12px;
+    border: 1px solid #292934;
+    padding: 12px 0 24px 0;
     display: flex;
     justify-content: space-around;
-    box-shadow: 0px 0px 10px #292934;
+    backdrop-filter: blur(12px);
 
     button {
         background: none;
@@ -24,6 +23,17 @@
             color: white;
             text-shadow: 0px 0px 24px white;
             transition: all .3s;
+        }
+
+        &.navbar__add {
+            background: $gradient-7;
+            color: white;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
         }
     }
 }
