--- a/src/components/Notifications/notifications.scss
+++ b/src/components/Notifications/notifications.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     gap: 12px;
     align-items: center;
+    z-index: 10;
     
     &__notification {
         background: #252934;
