--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -6,7 +6,8 @@
     gap: 20px;
     width: 100vw;
     padding: 0 24px;
-    height: calc(100vh - 70px);
+    height: 100vh;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     
