--- a/src/pages/Monitoring/monitoring.scss
+++ b/src/pages/Monitoring/monitoring.scss
@@ -101,6 +101,7 @@
         display: flex;
         flex-direction: column-reverse;
         overflow: hidden;
+        gap: 4px;
 
         .income, .expence {
           width: 12px;
