--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -3,4 +3,32 @@
     width: 100vw;
     margin-top: 24px;
     margin-bottom: 100px;
+
+    &__balance {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 12px auto;
+        gap: 12px;
+        background: #212121;
+        padding: 24px;
+        border-radius: 12px;
+
+        &__container {
+            display: flex;
+            justify-content: space-between;
+            gap: 8px;
+            text-align: center;
+
+            h3 {
+                font-weight: lighter;
+                opacity: .6;
+            }
+            
+            small {
+                font-weight: lighter;
+                opacity: .4;
+            }
+        }
+    }
 }
