--- a/src/pages/Wallet/wallet.scss
+++ b/src/pages/Wallet/wallet.scss
@@ -7,9 +7,53 @@
   margin-bottom: 100px;
 
   &__list {
-    margin-top: 24px;
+    margin: 24px auto;
+    padding: 0 12px;
+    width: calc(100% - 24px);
+  }
+
+  &__actions {
     display: flex;
-    flex-direction: column;
     gap: 12px;
+    justify-content: center;
+
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 4px;
+      width: 140px;
+      height: 40px;
+      border: 1px solid;
+      border-radius: 8px;
+      background: none;
+      color:  #5581F1;
+      
+      &.remove {
+        color: tomato;
+      }
+    }
+  }
+
+  &__last-transactions {
+    margin: 24px auto;
+    padding: 24px;
+    border-radius: 12px;
+    background-color: $dark-800;
+  
+    &__header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 24px;
+    }
+
+    &__list {
+      list-style: none;
+      margin-top: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
   }
 }
