--- a/src/index.scss
+++ b/src/index.scss
@@ -70,3 +70,10 @@ h1::after {
 .background-7 {
   background: $gradient-7;
 }
+
+
+
+
+.swiper-pagination-bullet {
+  background-color: antiquewhite;
+}
