--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -1,34 +1,42 @@
+@import 'src/styles/variables';
+
 .dashboard {
-    padding: 0 24px;
-    width: 100vw;
-    margin-top: 24px;
-    margin-bottom: 100px;
+  padding: 0 24px;
+  width: 100vw;
+  margin-top: 24px;
+  margin-bottom: 100px;
 
-    &__balance {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        margin: 12px auto;
-        gap: 12px;
-        background: #212121;
-        padding: 24px;
-        border-radius: 12px;
-
-        &__container {
-            display: flex;
-            justify-content: space-between;
-            gap: 8px;
-            text-align: center;
-
-            h3 {
-                font-weight: lighter;
-                opacity: .6;
-            }
-            
-            small {
-                font-weight: lighter;
-                opacity: .4;
-            }
-        }
+  &__transaction {
+    margin: 12px auto;
+    padding: 24px;
+    border-radius: 12px;
+    background-color: $dark-800;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+    
+    &__header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 24px;
+      
+      button {
+      border: 1px solid white;
+      color: black;
+      border-radius: 8px;
+      height: 40px;
+      width: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      }
     }
+    
+    &__list {
+      list-style: none;
+      margin-top: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+  }
 }
