--- a/src/pages/Wallet/wallet.scss
+++ b/src/pages/Wallet/wallet.scss
@@ -6,6 +6,19 @@
   margin-top: 24px;
   margin-bottom: 100px;
 
+  &__header {
+    display: flex;
+    justify-content: space-between;
+
+    button {
+      background: #4e5160;
+      border-radius: 8px;
+      border: none;
+      padding: 0 24px;
+      color: white;
+    }
+  }
+
   &__list {
     margin: 24px auto;
     padding: 0 16px;
@@ -17,6 +30,7 @@
     display: flex;
     gap: 12px;
     justify-content: center;
+    z-index: 10;
 
     button {
       display: flex;
@@ -56,5 +70,46 @@
       flex-direction: column;
       gap: 12px;
     }
+  }
+}
+
+.modal__transaction__add__colors {
+  .swiper-pagination {
+    position: initial;
+  }
+}
+
+.item-color {
+  width: 50px;
+  height: 50px;
+  border-radius: 12px;
+  opacity: .5;
+  
+  &.active {
+    opacity: 1;
+  }
+  &.background-1 {
+    background: $gradient-1;
+  }
+  &.background-2 {
+    background: $gradient-2;
+  }
+  &.background-3 {
+    background: $gradient-3;
+  }
+  &.background-4 {
+    background: $gradient-4;
+  }
+  &.background-5 {
+    background: $gradient-5;
+  }
+  &.background-6 {
+    background: $gradient-6;
+  }
+  &.background-7 {
+    background: $gradient-7;
+  }
+  &.background-8 {
+    background: $gradient-8;
   }
 }
