--- a/src/pages/Wallet/wallet.scss
+++ b/src/pages/Wallet/wallet.scss
@@ -1,4 +1,32 @@
 @import 'src/styles/variables';
+.dashboard__wallet {
+  margin: 12px auto;
+  padding: 24px;
+  border-radius: 12px;
+  background-color: $dark-800;
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 24px;
+    
+    button {
+      border: 1px solid white;
+      color: black;
+      border-radius: 8px;
+      height: 40px;
+      width: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  &__list {
+    margin-top: 24px;
+  }
+}
 
 .wallet {
   padding: 0 24px;
