--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 $gradient-1: linear-gradient(45deg, #ffcb52, #FF7B02);
-$gradient-2: linear-gradient(45deg, #C165DD, #5C27FE);
-$gradient-3: linear-gradient(45deg, #2AFEB7, #08C792);
+$gradient-2: linear-gradient(45deg, #FF0055, #000066);
+$gradient-3: linear-gradient(45deg, #fa00ff, #1ed18c);
 $gradient-4: linear-gradient(45deg, #5581F1, #1153FC);
+$gradient-4: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 $gradient-5: linear-gradient(45deg, #FACD68, #FC76B3);
 $gradient-6: linear-gradient(45deg, #00F7A7, #04F5ED);
 $gradient-7: linear-gradient(45deg, #1DE5E2, #B588F7);
